# devenv-sqlalchemy-asyncpg

./: .gitignore  README.md  alembic.ini  devenv.nix  pyproject.toml
app/: db.py  main.py  settings.py
app/data_access/: user.py
app/db_models/: user.py
app/pydantic_models/: user.py
app/router/: user.py
migrationns/: env.py
migrationns/versions/: 2d44fb51cd1e_.py
tests/: conftest.py  dataset.py
tests/tests_data/: user.py
